--- a/init/package.json
+++ b/init/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "start": "tsx server/index.tsx",
     "dev": "concurrently --kill-others \"npm run sever:dev\" \"npm run fe:dev\"",
-    "sever:dev": "NODE_ENV=development tsx --watch server/index.tsx",
-    "fe:dev": "parcel src/index.html --no-cache",
+    "sever:dev": "cross-env NODE_ENV=development tsx --watch server/index.tsx",
+    "fe:dev": "cross-env NODE_ENV=development parcel src/index.html --no-cache",
     "build": "parcel build src/index.html"
   },
   "dependencies": {
-    "ssh-hook": "^0.1.0",
+    "ssr-hook": "^0.1.1",
     "cors": "^2.8.5",
     "easy-page-router": "^0.1.7",
     "express": "^4.21.1",
@@ -24,6 +24,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "concurrently": "^9.0.1",
+    "cross-env": "^7.0.3",
     "parcel": "^2.12.0",
     "tsx": "^4.19.1"
   }
